# VoiceForge_frontend

./: .gitignore  README.md  USAGE.md  build-universal.sh  dialogue_simple.tab  index.html  package-lock.json  package.json  test.txt  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: elevenlabs.rs  generate.rs  mod.rs  parse.rs
src/components/: CharacterList.tsx  DialoguePreview.tsx  GenerationPanel.tsx  Settings.tsx  VoiceAssignment.tsx
